src/objects/DocSignature__c.object
<CustomObject>
    <fields>
        <fullName>DocSigner__c</fullName>
        <label>DocSigner</label>
        <picklist>
            <picklistValues>
                <fullName>DON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facility Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Witness</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MasterDocument__c</fullName>
        <label>MasterDocument</label>
        <referenceTo>MasterDocument__c</referenceTo>
        <relationshipLabel>DocSignatures</relationshipLabel>
        <relationshipName>DocSignatures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ReSign_Interval__c</fullName>
        <label>ReSign Interval</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half-Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReSign_Required__c</fullName>
        <label>ReSign Required</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>DocSignature</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocSignatures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>